# agent-spec-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/faq/: getting_started.md  troubleshooting.md
src/agent_spec_lab/: __init__.py  cli.py  state.py
src/agent_spec_lab/graphs/: enhanced_faq_graph.py  faq_graph.py  intelligent_faq_graph.py
src/agent_spec_lab/nodes/: __init__.py  answer.py  classifier.py  confidence.py  expansion.py  fallback.py  memory.py  reformulator.py  retriever.py  uncertainty.py
src/agent_spec_lab/tools/: __init__.py  faq_loader.py  openai.py  tracing.py
tests/: conftest.py  test_cli.py  test_cli_prescreening.py  test_enhanced_fallback.py  test_enhanced_graph.py  test_fallback_fake_llm.py  test_graph.py  test_integration_responsible_ai.py  test_loader.py  test_reformulator_logic.py
