[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-spec-lab"
version = "0.1.0"
description = "LangGraph FAQ agent with LangSmith tracing"
authors = [{name = "Agent"}]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "langgraph>=0.0.49",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.8",
    "langsmith>=0.1.65",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "typer[all]>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "mypy>=1.10.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
mypy_path = "src"
